--- a/src/sass/chunks/base.scss
+++ b/src/sass/chunks/base.scss
@@ -1,5 +1,35 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: #ffffff;
+  font-family: "Cormorant Garamond", serif;
+}
+
+body {
+  background-color: #111111;
+}
+
+header {
+  background: url("../img/bgc.png") no-repeat;
+  height: 100vh;
+  margin-bottom: 120px;
+}
+
+footer{
+  .container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+  }
+}
+
+.container {
+  max-width: 1296px;
+  margin: 0 auto;
+}
+
+a {
+  text-decoration: none;
 }
