--- a/src/sass/chunks/cosmetics.scss
+++ b/src/sass/chunks/cosmetics.scss
@@ -2,10 +2,5 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-
-    &__element{
-        &__img{
-            
-        }
-    }
+    margin-bottom: 180px;
 }
