--- a/src/sass/chunks/footer.scss
+++ b/src/sass/chunks/footer.scss
@@ -50,11 +50,18 @@
   &__instagram {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
+    flex-direction: column;
 
     &__title {
       font-weight: 700;
       font-size: 24px;
+      margin-bottom: 20px;
+    }
+
+    &__img{
+      width: 50px;
+      height: 50px;
     }
   }
 }
